--- a/index.html
+++ b/index.html
@@ -4,23 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E Commerce</title>
+    <link rel="stylesheet" href="style.css">
+    <title>E-commerce</title>
 </head>
 <body>
     <header>
-
+        <div class="topnav">
+            <a class="navbar-brand" href="#">
+                <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+                Bootstrap
+              </a>
+            <a class="active" href="">Home</a>
+            <a href="">Contact</a>
+            <a href="">Sobre</a>
+          </div>
     </header>
+    <section class="primeira-sessao">
+        <div class="container">
+            <h3>Nossa História</h3>
+            <p class="paragrafo-um">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi animi eligendi quos praesentium reprehenderit non modi alias, enim vero, consequatur harum voluptas officia quae id porro magni! Enim, nulla a!</p>
+        </div>
+        <img src="livraria.jpg" alt="livros">
+    </section>
+    <section class="segunda-sessao">
 
-    <main>
-
-    </main>
-
-    <footer>
-        <nav>
-            <p>
-                <h3>Support</h3>
-            </p>
-        </nav>
-    </footer>
+    </section>
 </body>
 </html>
